--- a/styles.css
+++ b/styles.css
@@ -190,11 +190,11 @@ html, body {
     font-weight: bold;
 }
 
-.event-city {
+.event-company {
     width: 24%;
 }
 
-.event-arena {
+.event-title {
     width: 42%;
 }
 
